--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,13 @@ form {
   min-width: 300px;
   width: 60vw;
 }
+
+fieldset {
+  border: none;
+  padding: 2rem 0;
+  border-bottom: 3px solid rgb(59, 59, 79);
+}
+
+fieldset:last-of-type {
+  border-bottom: none;
+}
