--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,11 @@ fieldset {
 fieldset:last-of-type {
   border-bottom: none;
 }
+
+input, textarea, select {
+  width: 100%;
+  margin: 10px;
+  margin-left: 0;
+  margin-right:0;
+  margin-bottom: 0;
+}
