--- a/styles.css
+++ b/styles.css
@@ -46,4 +46,8 @@ input, textarea, select {
 
 .inline {
   width: unset;  /*This line removes the rule that sets all the input elements to width:100%  */
+  margin-right: 0.5em;
+  margin-top: 0;
+  margin-left:0;
+  margin-bottom:0;
 }
