--- a/styles.css
+++ b/styles.css
@@ -50,4 +50,13 @@ input, textarea, select {
   margin-top: 0;
   margin-left:0;
   margin-bottom:0;
+  vertical-align: middle;
+}
+
+input, textarea {
+  background-color: #0a0a23;
+  border: 1px solid #0a0a23;
+  color: #ffffff;
+  min-height: 2em;
+
 }
