--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,14 @@ input, textarea {
   
 
 }
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #3b3b4f;
+  border-color: white;
+
+}
