--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ form {
   max-width: 500px;
   min-width: 300px;
   width: 60vw;
+  padding-bottom: 2em;
 }
 
 fieldset {
@@ -71,4 +72,8 @@ input[type="submit"] {
   background-color: #3b3b4f;
   border-color: white;
   min-width: 300px;
+}
+
+input[type="file"] {
+  padding: 1px 2px;
 }
